spreed-speakfreely-server (0.15.1) precise; urgency=low

  * Changed Makefile to allow tarball and release builds with
    local third party sources in ./vendor too.

 -- Simon Eisenmann <simon@struktur.de>  Tue, 04 Mar 2014 11:10:31 +0100

spreed-speakfreely-server (0.15.0) precise; urgency=low

  * Initial public release.

 -- Simon Eisenmann <simon@struktur.de>  Thu, 13 Feb 2014 16:14:05 +0100
