@@ -6,6 +6,7 @@ listen = 127.0.0.1:8080
 #readtimeout = 10
 #writetimeout = 10
 #basePath = /some/sub/path/ # Set this when running behind a web server under a sub path.
+#maxfd = 32768 # Try to set max open files limit on start (works only when run as root).
 
 [app]
 #title = Spreed Speak Freely
